Styling fix for header banner on mobile web

--- a/OpenOversight/app/static/css/openoversight.css
+++ b/OpenOversight/app/static/css/openoversight.css
@@ -174,6 +174,16 @@ body {
     text-shadow: 1px 1px 1px #999;
 }
 
+@media (max-width: 550px) {
+    .hero {
+        font-size: 28px;
+    }
+    .hero-section {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+}
+
 .subhero {
     color: #333;
     font-size: 18px;
